--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --experimental-cli --write .",
     "format-graphql": "./scripts/format-graphql-schema.tsx",
     "preinstall": "command -v git >/dev/null 2>&1 && git config core.hooksPath git-hooks || exit 0",
-    "ios": "expo run:ios --device 'iPhone 16 Pro'",
+    "ios": "expo run:ios --device 'Lijing’s iPhone🙈'",
     "lint": "eslint --cache .",
     "lint:format": "prettier --experimental-cli --cache --check .",
     "prebuild": "expo prebuild",
@@ -33,10 +33,12 @@
     "@react-navigation/stack": "^7.4.7",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "expo": "53.0.20",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "^13.3.2",
+    "expo-haptics": "^14.1.4",
     "expo-linking": "~7.1.7",
     "expo-localization": "^16.1.6",
     "expo-router": "5.1.4",
