--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
     "@nkzw/stack": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.5",
     "expo": "53.0.20",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-drizzle-studio-plugin": "^0.2.0",
     "expo-font": "^13.3.2",
     "expo-haptics": "^14.1.4",
     "expo-linking": "~7.1.7",
     "expo-localization": "^16.1.6",
     "expo-router": "5.1.4",
+    "expo-sqlite": "^16.0.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "fbtee": "^1.3.2",
@@ -68,6 +72,7 @@
     "@react-native/metro-babel-transformer": "^0.79.4",
     "@types/react": "~19.1.11",
     "@vitejs/plugin-react": "^5.0.1",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "expo-build-disk-cache": "^0.5.0",
     "npm-run-all2": "^8.0.4",
