--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nkzw-app",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "main": "expo-router/entry",
   "scripts": {
     "android": "expo run:android",
@@ -29,6 +28,7 @@
     "@nkzw/core": "^1.3.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@nkzw/stack": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "babel-plugin-inline-import": "^3.0.0",
@@ -45,6 +45,7 @@
     "expo-linking": "~7.1.7",
     "expo-localization": "^16.1.6",
     "expo-router": "5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-sqlite": "^16.0.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
@@ -56,12 +57,14 @@
     "react-native-edge-to-edge": "^1.6.2",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^3.3.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "4.15.3",
+    "react-native-screens": "4.15.4",
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.1",
-    "react-native-worklets": "^0.4.2"
+    "react-native-worklets": "^0.4.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.6.2",
@@ -84,5 +87,6 @@
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
     "vitest-react-native": "^0.1.5"
-  }
+  },
+  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
