--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nkzw/core": "^1.3.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@nkzw/stack": "^2.2.0",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
